[package]
name = "luze"
version = "0.1.0"
authors = ["Peter Hahlweg <peter.github@mailbox.org>"]
edition = "2021"
rust-version = "1.71"
license = "Apache-2.0 OR MIT"
homepage = "https://crates.io"
repository = "https://github.com/PeterHahlweg/luze"
keywords = ["zettelkasten", "luhmann", "notes", "knowledge"]
categories = ["command-line-utilities"]
readme = "README.md"
description = "A digital Zettelkasten in the style of Niklas Luhmann."

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

[features]
default = ["sonic-rs"]
sonic-rs = ["dep:sonic-rs"]
serde-json = ["dep:serde_json"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sonic-rs = { version = "0.5.5", optional = true }
# For Rust < 1.76: cargo build --no-default-features --features serde-json
# You may also need to pin criterion's transitive deps:
#   cargo update -p half --precise 2.4.1
#   cargo update -p rayon --precise 1.9.0
#   cargo update -p rayon-core --precise 1.12.1
serde_json = { version = "1.0", optional = true }

[build]
rustflags = ["-C", "target-cpu=native"]
